--- a/styles/style.css
+++ b/styles/style.css
@@ -11,3 +11,23 @@ html{
     font-weight: 300;
     text-rendering: optimizeLegibility;
 }
+.row{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+header{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.705),rgba(0, 0, 0, 0.705)), url(img/hero.jpg);  
+    background-size: cover;
+    background-position: center; 
+    height: 100vh;
+}
+.hero-text-box{
+    position: absolute;
+    width: 1140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+h1{
+    margin: 0;
+}
