--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+
+/* ----------------------------------------------------- */
+/* BASIC SETUP */
+/* ----------------------------------------------------- */
+
 *{
     margin: 0;
     padding: 0;
@@ -11,10 +16,17 @@ html{
     font-weight: 300;
     text-rendering: optimizeLegibility;
 }
+/* ----------------------------------------------------- */
+/* REUSABLE COMPONENT */
+/* ----------------------------------------------------- */
 .row{
     max-width: 1140px;
     margin: 0 auto;
 }
+
+/* ----------------------------------------------------- */
+/* HEADER */
+/* ----------------------------------------------------- */
 header{
     background-image: linear-gradient(rgba(0, 0, 0, 0.705),rgba(0, 0, 0, 0.705)), url(img/hero.jpg);  
     background-size: cover;
@@ -28,6 +40,88 @@ header{
     left: 50%;
     transform: translate(-50%,-50%);
 }
+/* ----------------------------------------------------- */
+/* HEADINGS */
+/* ----------------------------------------------------- */
 h1{
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 20px;
+    color: #fff;
+    font-size: 200%;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 3px;
+}
+
+/* ----------------------------------------------------- */
+/* BUTTONS */
+/* ----------------------------------------------------- */
+.btn:link,
+.btn:visited{
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 200px;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+}
+
+.btn-full:link,
+.btn-full:visited{
+    background-color: #e67e22;
+    border: 1px solid #e67e22;
+    margin-right: 20px;
+    
+}
+.btn-ghost:link,
+.btn-ghost:visited{
+    border: 1px solid #e67e22;
+    color: #e67e22;
+}
+.btn:hover,
+.btn:active{
+    background-color:#cf6d17 ;
+}
+.btn-ghost:hover,
+.btn-ghost:active{
+    border: 1px solid #cf6d17;
+
+    color: #fff;
+}
+
+/* ----------------------------------------------------- */
+/* NAV */
+/* ----------------------------------------------------- */
+.logo{
+    height: 100px;
+    width: auto;
+    float:left;
+    margin-top: 20px;
+}
+.main-nav{
+    float:right;
+    list-style: none;
+    margin-top: 55px;
+}
+.main-nav li{
+    display: inline-block;
+    margin-left: 40px;
+    
+}
+.main-nav li a:link,
+.main-nav li a:visited{
+    padding-bottom:8px;
+    color:#fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 1px solid transparent;
+    transition: border-bottom 0.2s;
+}
+.main-nav li a:hover,
+.main-nav li a:active{
+    
+    border-bottom: 1px solid #cf6d17;
 }
