--- a/styles/style.css
+++ b/styles/style.css
@@ -83,6 +83,7 @@ h2::after{
 h3{
     font-size: 110%;
     margin-bottom: 15px;
+    font-weight: 400;
 }
 /* ----------------------------------------------------- */
 /* PARAGRAPHS */
@@ -91,10 +92,12 @@ h3{
      line-height: 145%;
      width: 69%;
      margin-left: 15.5%;
+    
  }
  .box p{
      font-size: 90%;
      line-height: 145%;
+     
  }
  /* ----------------------------------------------------- */
 /* ICONS */
@@ -178,5 +181,43 @@ h3{
     
     border-bottom: 1px solid #cf6d17;
 }
+/* ----------------------------------------------------- */
+/* PARAGRAPHS */
+/* ----------------------------------------------------- */
+.section-feature .long-copy{
+    margin-bottom: 30px;
+}
 
+/* ----------------------------------------------------- */
+/* MEALS */
+/* ----------------------------------------------------- */
+.section-meals{
+    padding: 0;
+}
+.meals-showcase{
+    list-style: none;
+    width: 100%;
 
+}
+.meals-showcase li {
+    display: block;
+    float: left;
+    width: 25%;
+}
+.meal-photo{
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+    background-color: #000;
+}
+.meal-photo img{
+    opacity: 0.7;
+    width: 100%;
+    height: auto;
+    transform: scale(1.15);
+    transition: transform 0.5s, opacity 0.5s;
+}
+.meal-photo img:hover{
+    opacity: 1;
+    transform: scale(1.03);
+}
