--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,18 @@ section{
 .box{
     padding: 1%;
 }
-
+.icon-small{
+    display: inline-block;
+    width: 30px;
+    color: #e67e22;
+    text-align: center;
+    font-size: 120%;
+    margin-right: 10px;
+    /*secrets to align text with icons*/
+    line-height: 110%;
+    vertical-align: middle;
+    margin-top: -5px;
+}
 /* ----------------------------------------------------- */
 /* HEADER */
 /* ----------------------------------------------------- */
@@ -119,7 +130,20 @@ h3{
     margin-bottom: 10px;
     
  }
-
+ /* ----------------------------------------------------- */
+/* GENERIC LINKS */
+/* ----------------------------------------------------- */
+a:link, a:visited{
+    color: #e67e22;
+    text-decoration: none;
+    border-bottom: 1px solid #e67e22;
+    padding-bottom: 1px;
+    transition: border-bottom 0.2s, color 0.2s;
+}
+a:hover,a:active{
+    color:#cf6d17;
+    border: 1px solid transparent;
+}
 /* ----------------------------------------------------- */
 /* BUTTONS */
 /* ----------------------------------------------------- */
@@ -267,8 +291,23 @@ h3{
     font-size:150%;
     margin-right:25px ;
 }
+.btn-app:link, .btn-app:visited{
+    border: 0;
+}
 .btn-app img{
     height: 50px;
     width: auto;
     margin-right: 10px;
+}
+/* ----------------------------------------------------- */
+/* CITIES */
+/* ----------------------------------------------------- */
+
+.box img{
+     width: 100%;
+     height: auto;
+     margin-bottom: 15px;
+}
+.city-feature{
+    margin-bottom: 5px;
 }
