--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,7 @@ header{
     background-size: cover;
     background-position: center; 
     height: 100vh;
+    background-attachment: fixed;
 }
 .hero-text-box{
     position: absolute;
@@ -310,4 +311,42 @@ a:hover,a:active{
 }
 .city-feature{
     margin-bottom: 5px;
+}
+/* ----------------------------------------------------- */
+/* TESTIMNOIAL */
+/* ----------------------------------------------------- */
+.section-testimonials{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.705),rgba(0, 0, 0, 0.705)), url(../assets/back-customers.jpg);
+    background-size: cover;
+    color: #fff;
+    background-attachment: fixed;
+}
+
+blockquote{
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+}
+blockquote::before{
+    content:"\201C";
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: 5px ;
+    left:-5px;
+}
+cite{
+    display: block;
+    font-size: 90%;
+    margin-top: 25px;
+
+}
+
+cite img{
+    height: 45px;
+    border-radius: 50%;
+    margin-right:10px ;
+    vertical-align: middle;
 }
