--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,7 @@ section{
     line-height: 110%;
     vertical-align: middle;
     margin-top: -5px;
+    
 }
 /* ----------------------------------------------------- */
 /* HEADER */
@@ -149,7 +150,8 @@ a:hover,a:active{
 /* BUTTONS */
 /* ----------------------------------------------------- */
 .btn:link,
-.btn:visited{
+.btn:visited,
+input[type=submit]{
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -160,7 +162,8 @@ a:hover,a:active{
 }
 
 .btn-full:link,
-.btn-full:visited{
+.btn-full:visited,
+input[type=submit]{
     background-color: #e67e22;
     border: 1px solid #e67e22;
     margin-right: 20px;
@@ -172,7 +175,9 @@ a:hover,a:active{
     color: #e67e22;
 }
 .btn:hover,
-.btn:active{
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active{
     background-color:#cf6d17 ;
 }
 .btn-ghost:hover,
@@ -349,4 +354,76 @@ cite img{
     border-radius: 50%;
     margin-right:10px ;
     vertical-align: middle;
+}
+/* ----------------------------------------------------- */
+/* SIGN UP */
+/* ----------------------------------------------------- */
+.section-plans{
+    background-color: #f4f4f4;
+
+}
+.plan-box{
+    background-color: #fff;
+    border-radius: 5px;
+    width:90%;
+    margin-left: 5%;
+    box-shadow: 0 2px 2px #e8e8e8;
+}
+.plan-box div{
+    padding: 15px;
+    border-bottom: 1px solid #e8e8e8;
+}
+.plan-box div:first-child{
+    background-color: #fcfcfc;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+.plan-box div:last-child{
+    text-align: center;
+    border: none;
+}
+.plan-price{
+    font-size: 250%;
+    margin-bottom: 10px;
+    color: #cf6d17;
+}
+.plan-price span{
+    font-size: 30% ;
+    font-weight: 300;
+}
+.plan-price-meal{
+    font-size: 80%;
+}
+.plan-box ul{
+    list-style: none;
+}
+.plan-box ul li{
+    padding: 5px 0;
+}
+/* ----------------------------------------------------- */
+/* CONTACT FORM */
+/* ----------------------------------------------------- */
+.contact-form{
+    width: 60%;
+    margin: 0 auto;
+}
+input[type=text],
+input[type=email],
+ select,
+  textarea{
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+textarea{
+    height: 100px;
+}
+input[type="checkbox"]{
+    margin: 10px 5px 10px 0;
+
+}
+*:focus{
+    outline: none;
 }
