--- a/styles/style.css
+++ b/styles/style.css
@@ -427,3 +427,79 @@ input[type="checkbox"]{
 *:focus{
     outline: none;
 }
+/* ----------------------------------------------------- */
+/* FOOTER */
+/* ----------------------------------------------------- */
+footer{
+    background-color: #333;
+    padding: 40px;
+    font-size:80% ;
+}
+.footer-nav{
+    list-style: none;
+    float: left;
+}
+.social-links {
+    list-style: none;
+    float: right;
+}
+.footer-nav li,
+.social-links li{
+    display: inline-block;
+    margin-right: 20px;
+}
+.footer-nav li:last-child,
+.social-links li:last-child{
+    margin: 0;
+}
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited{
+    text-decoration: none;
+    border: 0;
+    color: #777;
+    transition: color 0.2s;
+}
+.footer-nav li a:hover,
+.footer-nav li a:active,
+.social-links li a:hover,
+.social-links li a:active{
+    color: #ddd;
+}
+footer p{
+   color: #777;
+    text-align: center;
+    font-weight: 400;
+    margin-top: 20px;
+}
+.social-links li a:link,
+.social-links li a:visited{
+    font-size: 150%;
+}
+.logo-facebook,
+.logo-twitter,
+.logo-instagram,
+.logo-whatsapp{
+    transition: color 0.2s;
+}
+.logo-facebook:hover{
+
+    color:#3b5998 ;
+    
+}
+.logo-twitter:hover{
+
+    color:#1da1f2 ;
+    
+}
+.logo-instagram:hover{
+
+    color:#c32aa3 ;
+    
+}
+.logo-whatsapp:hover{
+
+    color:#25d366 ;
+    
+}
