add media queries

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,13 +8,15 @@
     padding: 0;
     box-sizing: border-box;
 }
-html{
+html,
+body{
     background-color: #fff;
     color: #555;
     font-family: 'Lato', 'Arial', sans-serif;
     font-size: 20px;
     font-weight: 300;
     text-rendering: optimizeLegibility;
+    overflow-x:hidden ;
 }
 .clearfix{
     zoom:1
@@ -130,8 +132,8 @@ h3{
     display: block;
     color: #e67e22;
     margin-bottom: 10px;
-    
- }
+   
+}
  /* ----------------------------------------------------- */
 /* GENERIC LINKS */
 /* ----------------------------------------------------- */
