--- a/styles/style.css
+++ b/styles/style.css
@@ -198,6 +198,14 @@ input[type=submit]:active{
     float:left;
     margin-top: 20px;
 }
+.logo-black{
+    display:none;
+    height: 50px;
+    width: auto;
+    float:left;
+    margin:5px 0; 
+}
+/*main nav*/
 .main-nav{
     float:right;
     list-style: none;
@@ -215,14 +223,40 @@ input[type=submit]:active{
     text-decoration: none;
     text-transform: uppercase;
     font-size: 90%;
-    border-bottom: 1px solid transparent;
+    border-bottom: 2px solid transparent;
     transition: border-bottom 0.2s;
 }
 .main-nav li a:hover,
 .main-nav li a:active{
     
-    border-bottom: 1px solid #cf6d17;
+    border-bottom: 2px solid #cf6d17;
 }
+/*sticky nav*/
+.sticky{
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.931);
+    box-shadow: 0 2px 2px #ccc;
+    z-index: 9999;
+}
+.sticky .main-nav{
+    margin-top: 18px;
+}
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited{
+    padding: 15px 0;
+    color:#555;
+    
+}
+.sticky .logo{
+    display: none;
+}
+.sticky .logo-black{
+    display: block;
+}
+
 /* ----------------------------------------------------- */
 /* PARAGRAPHS */
 /* ----------------------------------------------------- */
