add animations on scroll

--- a/styles/style.css
+++ b/styles/style.css
@@ -542,3 +542,7 @@ footer p{
     color:#25d366 ;
     
 }
+/* ----------------------------------------------------- */
+/* Animations */
+/* ----------------------------------------------------- */
+
