--- a/styles/style.css
+++ b/styles/style.css
@@ -234,6 +234,19 @@ input[type=submit]:active{
     
     border-bottom: 2px solid #cf6d17;
 }
+/*mobile nav*/
+
+.mobile-nav-icon{
+    float: right;
+    margin-top: 30px;
+     cursor: pointer;
+     display: none;
+}
+.mobile-nav-icon ion-icon{
+    font-size: 200%;
+    color: #fff;
+}
+
 /*sticky nav*/
 .sticky{
     position: fixed;
