--- a/styles/style.css
+++ b/styles/style.css
@@ -556,6 +556,28 @@ footer p{
     
 }
 /* ----------------------------------------------------- */
-/* Animations */
+/* FORM messages */
 /* ----------------------------------------------------- */
 
+.form-messages{
+    width: 70%;
+    margin: 0 auto;
+    padding:10px;
+    font-weight: 400;
+    border: 2px solid black;
+    border-radius: 3px;
+    -webkit-border-radius:3px;
+    -moz-border-radius:3px;
+    -ms-border-radius:3px;
+    -o-border-radius:3px;
+    margin-bottom: 20px;
+}
+
+.success{
+    border-color: #0ace45;
+    color: #0ace45;
+}
+.error{
+    border-color: #cc0e0e;
+    color: #cc0e0e;
+}
